<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <RelativeLayout
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_name"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/grocery_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:hint="@string/hint_item" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grocery_quantity"
            android:layout_marginTop="15dp"
            android:layout_below="@id/grocery_item"
            android:hint="@string/quantity_hint"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            android:layout_below="@+id/grocery_quantity"
            android:text="@string/save_title"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"
            />

    </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>