<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/textconfirmID"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/noButtonID"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:layout_below="@id/textconfirmID"
                android:textColor="@android:color/black"
                android:layout_marginTop="19dp"

                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/yesButtonID"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/noButtonID"
                android:textColor="@android:color/black"
                android:layout_marginTop="19dp"

                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>